
   * Fully consistent API (defined and correct return values)

   * Complete GLUT independence (internal character sets)

   * Basic building support for biological polymers & small molecules
     with and w/o hydrogens

Current Bugs to Fix

   * superposition system fails with degenerate sets (planer atoms, etc).
     sometimes it just fails period

Changes up to 0.82

   * moved configuration files to a subdirectory "setup"

   * mpng now can support a range in order to enable coarse-grained parallelism
     (distributed movie rendering)

   * "within" operator added to selection language

   * visible selection operator no longer hits disabled objects

   * origin, zoom, and orient now take "state" as optional argument with special
     handling for 0 (all states) and -1 (current state)

   * eigensolve output now considered blather

   * important bug-fix on rotate and translate commands

   * "present" operator in selection language and tests for "state" operator

Changes up to 0.81

   * fixed bug in bg_color API function

Changes up to 0.80

   * major bug fix to "carve" in isomesh

   * "command ?" now gives a list of arguments 

   * fix spurious bugs reading files under unix

   * added support for alternate residue id codes in secondary structure records

   * cylinders have become sausages, and...
      ...we now have flat-capped cylinders (0203)!

   * fixed duplicate logging with Run command

   * create a simple vector-based font (0203)

   * 3D text in CGOs

   * linear constraints in molecular sculpting engine

   * acetylene buidling block

Changes up to 0.79

   * internal character set

   * solid isosurface rendering algorithm: "isosurface" command

   * parser updated to handle selections like "resi 10 and (name c,n,o) and chain A"
     which lack surrounding parentheses, but which have delimiters inside

   * parser updated to handle (alt A+'') and similar constructs (previously DOA).
